[tool.poetry]
name = "harparse"
version = "0.0.1"
description = "HAR file parser and extractor"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
black = "^22.6.0"
pytest = "^7.1.2"
mypy = "^0.971"

[tool.poetry.scripts]
harparse = "harparse.__main__:cli"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "harparse"
description = "HAR file parser and extractor"
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
