[tool.poetry]
name = "harparse"
version = "0.0.2"
description = "HAR file parser and extractor"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
black = "^22.10.0"
pytest = "^7.2.0"
mypy = "^0.982"

[tool.poetry.scripts]
harparse = "harparse.__main__:cli"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

